[gd_scene load_steps=4 format=3 uid="uid://cmy0i5jl2uuxq"]

[ext_resource type="Script" uid="uid://5p8yiadgixey" path="res://simulation_scenes/event_panel/event_panel_main.gd" id="1_pinyc"]
[ext_resource type="Script" uid="uid://brk7yncqsw4jd" path="res://simulation_scenes/event_panel/event_gui_panel.gd" id="1_wsiaw"]
[ext_resource type="PackedScene" uid="uid://chhjmfi3ebntn" path="res://simulation_scenes/event_panel/event_agent_waypoint_buttons.tscn" id="2_skccq"]

[node name="EventPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pinyc")

[node name="PanelContainer" type="PanelContainer" parent="." node_paths=PackedStringArray("description_edit", "type_edit", "trigger_item_list", "trigger_overall_item_list", "delete_button", "wp_add_new", "waypoint_base_node")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -277.5
offset_right = 356.0
offset_bottom = 277.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wsiaw")
description_edit = NodePath("MarginContainer/VBoxContainer/ScrollContainer/GridContainer/DescriptionTextEdit")
type_edit = NodePath("MarginContainer/VBoxContainer/ScrollContainer/GridContainer/TypeTextEdit")
trigger_item_list = NodePath("MarginContainer/VBoxContainer/ScrollContainer/GridContainer/TriggerAgentItemList")
trigger_overall_item_list = NodePath("MarginContainer/VBoxContainer/ScrollContainer/GridContainer/TriggerOverallItemList")
delete_button = NodePath("MarginContainer/VBoxContainer/HBoxContainer/DeleteButton")
wp_add_new = NodePath("MarginContainer/VBoxContainer/ScrollContainer/GridContainer/WaypointsContainer/NewWaypointButton")
template_waypoints = ExtResource("2_skccq")
waypoint_base_node = NodePath("MarginContainer/VBoxContainer/ScrollContainer/GridContainer/WaypointsContainer")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Event"

[node name="Null2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Null3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Null4" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
placeholder_text = "Input Description Here"
context_menu_enabled = false
shortcut_keys_enabled = false
scroll_fit_content_height = true

[node name="TypeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
tooltip_text = "Exported in the Event Type field"
mouse_filter = 0
text = "Event Type:"

[node name="TypeTextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
placeholder_text = "Exported Event Type"
scroll_fit_content_height = true

[node name="TriggerAgentLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
tooltip_text = "When an agent will trigger the event"
mouse_filter = 0
text = "Trigger Type Per Agent:"

[node name="TriggerAgentItemList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
allow_search = false
auto_height = true
item_count = 3
item_0/text = "On Arrival at Waypoint"
item_1/text = "On Leaving Waypoint"
item_2/text = "On Both of the Above"

[node name="TriggerOverallLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Trigger Type Overall:"

[node name="TriggerOverallItemList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
allow_search = false
auto_height = true
item_count = 5
item_0/text = "On Each Agent"
item_1/text = "On Each Agent (Excluding First)"
item_2/text = "On Each Agent (Excluding Last)"
item_3/text = "On Each Agent (Excluding First and Last)"
item_4/text = "On All Agents"

[node name="Null5" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Null6" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Waypoints" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
text = "Waypoints:"

[node name="WaypointsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="NewWaypointButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/WaypointsContainer"]
layout_mode = 2
text = "Add New"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Changes"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="DeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Event"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/GridContainer/WaypointsContainer/NewWaypointButton" to="PanelContainer" method="_on_new_waypoint_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
